--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,6 +7,31 @@
         <link rel="stylesheet" type="text/css" href="calculator.css" />
     </head>
     <body>
-        <!-- Fill in html here -->
+        <div id="major">
+            <div id="minor">
+                <div id="first" class="inputs">
+                    <p id="fn">
+                        first number
+                    </p>
+                    <input type="text" id="fntext"></input>
+                </div>
+                <div id="second" class="inputs">
+                    <p id="sn">
+                        second number
+                    </p>
+                    <input type="text" id="sntext"></input>
+                </div>
+            </div>
+            <div id="buttons">
+                <input type="radio" name="radio" id="add">Add</input>
+                <input type="radio" name="radio" id="subtract">Subtract</input>
+                <input type="radio" name="radio" id="multiply">Multiply</input>
+                <input type="radio" name="radio" id="divide">Divide</input>
+            </div>
+            <div id="ec">
+                <button id="equals" class="thing">=</button>
+                <button id="clear" class="thing">Clear</button>
+            </div>
+        </div>
     </body>
 </html>
