--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>Calculator</title>
-        <script type="text/javascript" src="controller.js"></script>
-        <script type="text/javascript" src="calculator.js"></script>
+        
         <link rel="stylesheet" type="text/css" href="calculator.css" />
     </head>
     <body>
@@ -13,7 +12,7 @@
                     <p id="fn">
                         first number
                     </p>
-                    <input type="text" id="fntext"></input>
+                    <input type="text" id="fntext" autofocus></input>
                 </div>
                 <div id="second" class="inputs">
                     <p id="sn">
@@ -33,5 +32,8 @@
                 <button id="clear" class="thing">Clear</button>
             </div>
         </div>
+        <script type="text/javascript" src="calculator.js"></script>
+        <script type="text/javascript" src="controller.js"></script>
+        
     </body>
 </html>
